Update homepage contents & layout
Fix router links and add placeholders.

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,4 +1,5 @@
 {
   "home": "Startseite",
-  "about": "Über uns"
+  "aboutUs": "Über uns",
+  "tagline": "Angepasste IT Lösungen für Ihr Unternehmen."
 }
