Update homepage layout and styling for better responsiveness, using localization strings

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,5 +1,5 @@
 {
   "home": "Startseite",
   "aboutUs": "Über uns",
-  "tagline": "Angepasste IT Lösungen für Ihr Unternehmen."
+  "tagline": "Massgeschneiderte IT Lösungen für Ihr Unternehmen."
 }
