--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,5 +1,6 @@
 {
   "home": "Startseite",
   "aboutUs": "Über uns",
-  "tagline": "Massgeschneiderte IT Lösungen für Ihr Unternehmen."
+  "tagline": "Massgeschneiderte IT Lösungen für Ihr Unternehmen.",
+  "footerLine": "IT Lösungen von IMS Schülern mit {0} seit {1}."
 }
