--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,6 @@
 {
   "home": "Home",
   "aboutUs": "About Us",
-  "tagline": "Individual IT solutions for your brand."
+  "tagline": "Individual IT solutions for your brand.",
+  "footerLine": "IT solutions by IMS students with {0} since {1}."
 }
