--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -2,5 +2,8 @@
   "home": "Startseite",
   "aboutUs": "Über uns",
   "tagline": "Massgeschneiderte IT Lösungen für Ihr Unternehmen.",
-  "footerLine": "IT Lösungen von IMS Schülern mit {0} seit {1}."
+  "footerLine": "IT Lösungen von IMS Schülern mit {0} seit {1}.",
+  "theTeam": "Das Team",
+  "ceo": "Mitgründer / Chief Executive Officer / Grafik Designer",
+  "cto": "Mitgründer / Chief Technical Officer / Hauptentwickler"
 }
