[ENHANCEMENTS] Homepage Content and Translations (#3)
* Update homepage layout and styling for better responsiveness, using localization strings

* Add Vue appear transitions

* Update footer text and styling

* Use i18n for footer localization

* Fix homepage styling to facilitate additional content

* Add team cards

Include local images and translations of position description.

* Update profile card layout, simplify design and highlight key elements

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,5 +1,9 @@
 {
   "home": "Startseite",
   "aboutUs": "Über uns",
-  "tagline": "Angepasste IT Lösungen für Ihr Unternehmen."
+  "tagline": "Massgeschneiderte IT Lösungen für Ihr Unternehmen.",
+  "footerLine": "IT Lösungen von IMS Schülern mit {0} seit {1}.",
+  "theTeam": "Das Team",
+  "ceo": "Mitgründer / Chief Executive Officer / Grafik Designer",
+  "cto": "Mitgründer / Chief Technical Officer / Hauptentwickler"
 }
