Add `TeamCard` component with additional information and improved responsive layout

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -4,6 +4,9 @@
   "tagline": "Massgeschneiderte IT Lösungen für Ihr Unternehmen.",
   "footerLine": "IT Lösungen von IMS Schülern mit {0} seit {1}.",
   "theTeam": "Das Team",
-  "ceo": "Mitgründer / Chief Executive Officer / Grafik Designer",
-  "cto": "Mitgründer / Chief Technical Officer / Hauptentwickler"
+  "ceo": "Chief Executive Officer",
+  "graphicDesigner": "Grafik Designer",
+  "cto": "Chief Technical Officer",
+  "leadDeveloper": "Hauptentwickler",
+  "cofounder": "Mitgründer"
 }
