--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,6 +4,9 @@
   "tagline": "Individual IT solutions for your brand.",
   "footerLine": "IT solutions by IMS students with {0} since {1}.",
   "theTeam": "The Team",
-  "ceo": "Co-Founder / Chief Executive Officer / Graphic Designer",
-  "cto": "Co-Founder / Chief Technical Officer / Lead Developer"
+  "ceo": "Chief Executive Officer",
+  "graphicDesigner": "Graphic Designer",
+  "cto": "Chief Technical Officer",
+  "leadDeveloper": "Lead Developer",
+  "cofounder": "Co-Founder"
 }
