Add custom author color to blog post image

--- a/blog/nestjs-starter.mdx
+++ b/blog/nestjs-starter.mdx
@@ -14,6 +14,7 @@ author:
   tagline: Jenyus CTO & GraphQL Enthusiast
   website: https://ravianand.web.app/
   image: ../src/images/ravi_2_1_cropped_1.png
+  color: "#FEE4E4"
 featuredImage: ../images/nestjs.png
 ---
 
