--- a/blog/graphql-utils.mdx
+++ b/blog/graphql-utils.mdx
@@ -2,7 +2,7 @@
 slug: graphql-utils
 title: How Jenyus Optimizes Relationships in GraphQL APIs
 topic: Backend
-description: Jenyus engineers developed a package for various implementations of GraphQL to optimize relational data queries in high-performance APIs.
+description: A couple of weeks ago I described how we can leverage the GraphQL AST to optimize SQL queries, today we're going to see how Jenyus uses their own integration of the GraphQL-Utils package for NestJS to do the same in a scalable way.
 date: 2021-03-08
 tags:
   - name: GraphQL
