--- a/blog/graphql-utils.mdx
+++ b/blog/graphql-utils.mdx
@@ -2,7 +2,7 @@
 slug: graphql-utils
 title: How Jenyus Optimizes Relationships in GraphQL APIs
 topic: Backend
-description: See how Jenyus leverages the GraphQL API using their own integration of GraphQL-Utils for the NestJS framework to optimize database queries with a declarative approach.
+description: See how Jenyus leverages the GraphQL AST using their own integration of GraphQL-Utils for the NestJS framework to optimize database queries with a declarative approach.
 date: 2021-03-08
 tags:
   - name: GraphQL
