Add UpdatedAt to metadata in blog

--- a/blog/spesen-app.mdx
+++ b/blog/spesen-app.mdx
@@ -4,6 +4,7 @@ title: The Structure of a Modern VueJS-Based SPA with Bootstrap
 topic: Web Development
 description: Use the VueJS Framework to create a single page application for desktop as well as mobile usage.
 date: 2021-03-07
+updatedAt: 2021-03-11
 tags:
   - name: VueJS
     color: "#42b983"
