Update some mistakes in spesenapp blog

--- a/blog/spesen-app.mdx
+++ b/blog/spesen-app.mdx
@@ -33,11 +33,11 @@ Bootstrap is a responsive CSS component framework. It is widely accepted in the 
 
 As the project is not a huge one, and needs to be setup and deployed as quickly as possible, we at Jenyus Org opted to create the prototype in Vue for many of the same reasons as listed above. This decision was not taken lightly as the Team has experience in coding with a variety of frameworks, yet we defined crucial requirements to be best fit with Vue such as:
 
-- Easy Prototyping
+### Easy Prototyping
 
 In Vue it is especially easy to create prototypes. The **Spesen-App** is one of the projects, which first needed approval of the schools administrative board. This means we needed to create a prototype to showcase the superiority of the app asap.
 
-- Expandable
+### Expandable
 
 As the requirements of the app were not fully defined at the start of development, it was especially important to us to choose a framework, which supports us in expanding the project.
 
@@ -47,17 +47,17 @@ For these reasons we settled on using the VueJS framework for creating the **Spe
 
 To know why Bootstrap is the superior styling framework in this context, it is important to recall, what the requirements of the project are.
 
-- Easy Prototyping
+### Easy Prototyping
 
 Bootstrap has many ready-made components and supports creating good looking, modern styles in a matter of minutes.
 
-- Expandable
+### Expandable
 
 By offering access to the Bootstrap classes the styles are in no way bound, and are replaced, added upon and removed as quickly as setup with Bootstrap.
 
 # Setting up the Boilerplate
 
-Vue is wonderful for boilerplating, as the Vue CLI [Vue CLI](https://cli.vuejs.org/) can take care of creating a well setup, customised boilerplate.
+Vue is wonderful for boilerplating, as the [Vue CLI](https://cli.vuejs.org/) can take care of creating a well setup, customised boilerplate.
 
 As is usual with Vue the CLI is highly intuitive.
 
